.jjconflict-side-1/apps/servarr/radarr/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  defaultBackend:
    service:
      name: radarr
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - radarr
